<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scanning_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_above="@id/current_ip"
    android:orientation="vertical"
    android:padding="@dimen/padding_med">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/input"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/port_number"
            android:inputType="number" />

        <Button
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search" />
    </LinearLayout>

    <TextView
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_med"
        android:layout_marginBottom="@dimen/padding_med"
        android:gravity="center"
        android:text="@string/lookup_info"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lookup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:gravity="center"
        android:textColor="@color/colorAccent"
        android:visibility="gone" />

</LinearLayout>