<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eee">

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/current_ip"
        android:orientation="vertical"
        android:padding="@dimen/padding_med"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/host_ip_address"
            android:textSize="@dimen/text_med"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/ip1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:inputType="number"
                android:nextFocusDown="@id/ip2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/period"
                android:textSize="@dimen/text_large" />

            <EditText
                android:id="@+id/ip2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:inputType="number"
                android:nextFocusDown="@id/ip3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/period"
                android:textSize="@dimen/text_large" />

            <EditText
                android:id="@+id/ip3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:inputType="number"
                android:nextFocusDown="@id/ip4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/period"
                android:textSize="@dimen/text_large" />

            <EditText
                android:id="@+id/ip4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:inputType="number"
                android:nextFocusDown="@id/portStart" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_med"
            android:text="@string/port_range"
            android:textSize="@dimen/text_med"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/portStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/start"
                android:inputType="number"
                android:nextFocusDown="@id/portEnd" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/dash"
                android:textSize="@dimen/text_large" />

            <EditText
                android:id="@+id/portEnd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/end"
                android:inputType="number" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/current_ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/startButton"
        android:gravity="center"
        android:padding="@dimen/padding_med"
        android:textColor="@color/grey" />

    <TextView
        android:id="@+id/startButton"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_alignParentBottom="true"
        android:background="@drawable/selector_button"
        android:gravity="center"
        android:onClick="startScanning"
        android:text="@string/start_scanning"
        android:textColor="@color/white"
        android:textStyle="bold" />
</RelativeLayout>